# simdty

./: .travis.yml  Cargo.toml  README.md  build.rs  index.html  search-index.js
simdty/: struct.f32x16.html  struct.f32x2.html  struct.f32x32.html  struct.f32x4.html  struct.f32x64.html  struct.f32x8.html  struct.f64x16.html  struct.f64x2.html  struct.f64x32.html  struct.f64x4.html  struct.f64x64.html  struct.f64x8.html  struct.i16x16.html  struct.i16x2.html  struct.i16x32.html  struct.i16x4.html  struct.i16x64.html  struct.i16x8.html  struct.i32x16.html  struct.i32x2.html  struct.i32x32.html  struct.i32x4.html  struct.i32x64.html  struct.i32x8.html  struct.i64x16.html  struct.i64x2.html  struct.i64x32.html  struct.i64x4.html  struct.i64x64.html  struct.i64x8.html  struct.i8x16.html  struct.i8x2.html  struct.i8x32.html  struct.i8x4.html  struct.i8x64.html  struct.i8x8.html  struct.u16x16.html  struct.u16x2.html  struct.u16x32.html  struct.u16x4.html  (+20 more)
src/: lib.rs
src/simdty/: lib.rs.html
