[package]

name = "simdty"
version = "0.0.6"
authors = ["Huon Wilson <dbau.pp@gmail.com>", "Avi Weinstock <aweinstock314@gmail.com>"]

homepage = "https://github.com/aweinstock314/simdty"
repository = "https://github.com/aweinstock314/simdty"
documentation = "https://docs.rs/simdty"
license = "MIT/Apache-2.0"
keywords = ["numerics", "simd"]
readme = "README.md"
description = """
Definitions of many SIMD types.
"""


build = "build.rs"

[features]
unstable = []
